BJS2-27094 Сохранение и получение аналитики
Изменения после кросс ревью