@@ -4,6 +4,7 @@ import faang.school.analytics.model.AnalyticsEvent;
 import faang.school.analytics.model.EventType;
 import faang.school.analytics.model.Interval;
 import faang.school.analytics.repository.AnalyticsEventRepository;
+import faang.school.analytics.utils.DateUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -11,9 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 
 @RequiredArgsConstructor
 @Service
@@ -32,25 +30,23 @@ public class AnalyticsEventService {
     }
 
     private List<AnalyticsEvent> retrieveAnalytics(long receiverId, EventType eventType) {
-        try (Stream<AnalyticsEvent> eventStream = analyticsEventRepository.findByReceiverIdAndEventType(receiverId, eventType)) {
-            return eventStream.collect(Collectors.toList());
-        }
+        return analyticsEventRepository.findByReceiverIdAndEventType(receiverId, eventType);
     }
 
     private List<AnalyticsEvent> filterAnalyticsEvents(List<AnalyticsEvent> events, Interval interval, LocalDateTime from, LocalDateTime to) {
         return events.stream()
                 .filter(event -> filterByIntervalOrPeriod(event, interval, from, to))
                 .sorted(Comparator.comparing(AnalyticsEvent::getReceivedAt).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean filterByIntervalOrPeriod(AnalyticsEvent event, Interval interval, LocalDateTime from, LocalDateTime to) {
+        LocalDateTime eventDate = event.getReceivedAt();
+
         if (interval != null) {
-            return (event.getReceivedAt().isAfter(interval.getFrom()) || event.getReceivedAt().isEqual(interval.getFrom())) &&
-                    (event.getReceivedAt().isBefore(interval.getTo()) || event.getReceivedAt().isEqual(interval.getTo()));
+            return DateUtils.isBetweenInclusive(eventDate, interval.getFrom(), interval.getTo());
         } else {
-            return (event.getReceivedAt().isAfter(from) || event.getReceivedAt().isEqual(from)) &&
-                    (event.getReceivedAt().isBefore(to) || event.getReceivedAt().isEqual(to));
+            return DateUtils.isBetweenInclusive(eventDate, from, to);
         }
     }
 }
